Update project to Java 21
Co-authored-by: Finja Averhaus <finja.averhaus@iml.fraunhofer.de>
Co-authored-by: Martin Grzenia <martin.grzenia@iml.fraunhofer.de>
Merged-by: Stefan Walter <stefan.walter@iml.fraunhofer.de>